hphp/hack/test/typecheck/constraints/recursive_constraint_bad_2.php.exp
File "recursive_constraint_bad_2.php", line 4, characters 18-19:
Cyclic constraint between type parameters (Naming[2005])
