hphp/hack/test/typecheck/constraints/recursive_constraint_bad_2.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class MySet<T as Tu, Tu as T> {}
